<resources>
    <string name="app_name">Split</string>
    <string name="facebook_app_id">1743588149237356</string>
    <string name="welcome_message">Welcome&#160;</string>
    <string name="error">Error:&#160;</string>
    <string name="title_activity_create">Create Activity</string>
    <string name="title_activity_timeline">Timeline Activity</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_activity_event_details">Event Details Activity</string>
    <string name="title_activity_invite">Invite Activity</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="all_events">All Events</string>
    <string name="my_events">My Events</string>
    <string name="add_amount_needed">Add amount needed...</string>
    <string name="invite">Invite</string>
    <string name="add_a_description">Add a description...</string>
    <string name="add_a_title">Add a title...</string>
    <string name="paid">Paid</string>
    <string name="june_25th">June 25th</string>
    <string name="submit">Submit</string>
    <string name="event_title">Event Title</string>
    <string name="amount_needed">Amount Needed</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="contribute">Contribute</string>
    <string name="contribute_amount">Contribute with Venmo</string>
    <string name="add_a_location">Add a location</string>
    <string name="you_contributed">You contributed $%d</string>
    <string name="goal">$%1$d / $%2$d</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="pending">Pending</string>
    <string name="no_friends">Oh no! Looks like you don\'t have any friends on Eventribute</string>
    <string name="profile_picture">profile picture</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="click_to_select_start_date"><font size="17">Select start date…</font></string>
    <string name="click_to_select_start_time"><font size="17">Select start time…</font></string>
    <string name="see_payment_status">See Payment Status</string>
    <string name="title_activity_members_payment_status">MembersPaymentStatusActivity</string>
    <string name="paymentstatus">PaymentStatus</string>
    <string name="money">$%d</string>
    <string name="the_fare_way_to_plan">The fare way to plan</string>
    <string name="logo">logo</string>
    <string name="new_event">Create An Event</string>
    <string name="select_friends">Select Friends</string>
    <string name="must_enter_title_error">You must enter a title!</string>
    <string name="must_enter_date_error">You must enter a date!</string>
    <string name="must_enter_time_error">You must enter a time!</string>
    <string name="must_enter_location_error">You must enter a location!</string>
    <string name="must_enter_description_error">You must enter a description!</string>
    <string name="must_enter_goal_error">You must enter a reimbursement goal!</string>
    <string name="title">Title</string>
    <string name="start_date">Start date</string>
    <string name="start_time_hint">Start time</string>
    <string name="location">Location</string>
    <string name="description_hint">Description</string>
    <string name="goal_hint">How much will the event cost?</string>
    <string name="event_info">Event info</string>
    <string name="event_details">Event details</string>
    <string name="no_cover_photo">Are you sure you want to proceed without setting an event photo?</string>
    <string name="logout_are_you_sure">Are you sure you want to logout?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title_activity_venmo">VenmoActivity</string>
    <string name="_0">$0</string>
    <string name="pay">Pay</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
</resources>
