<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/profile_picture"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/iv_profile_pic"
        android:layout_toEndOf="@+id/iv_profile_pic" />

    <TextView
        android:id="@+id/tv_payment_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:text="@string/paymentstatus"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:layout_below="@+id/tv_name"
        android:layout_alignLeft="@+id/tv_name"
        android:layout_alignStart="@+id/tv_name" />

</RelativeLayout>
