<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<RelativeLayout
    android:id="@+id/rl_create"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".create.CreateActivity"
    tools:showIn="@layout/activity_create">

    <TextView
        android:id="@+id/tv_event_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/event_info"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignTop="@+id/iv_cover_photo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/iv_camera"
        android:layout_toStartOf="@+id/iv_camera"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="18sp"
            android:singleLine="true"
            android:backgroundTint="@color/abc_tint_switch_track"
            android:textColor="@color/abc_tint_switch_track" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_start_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignLeft="@+id/til_title"
        android:layout_alignStart="@+id/til_title"
        android:layout_below="@+id/til_title"
        android:layout_toStartOf="@+id/til_start_time"
        android:layout_toLeftOf="@+id/til_start_time">

    <EditText
        android:id="@+id/et_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:inputType="date"
        android:ems="10"
        android:textSize="16sp"
        android:textColor="@color/abc_tint_switch_track"
        android:backgroundTint="@color/abc_tint_switch_track" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_start_time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignRight="@+id/iv_cover_photo"
        android:layout_alignEnd="@+id/iv_cover_photo"
        android:layout_alignTop="@+id/til_start_date"
        android:layout_below="@+id/til_title" >

    <EditText
        android:id="@+id/et_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/start_time_hint"
        android:inputType="time"
        android:ems="10"
        android:textSize="16sp"
        android:backgroundTint="@color/abc_tint_switch_track"
        android:textColor="@color/abc_tint_switch_track" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/event_details"
        android:id="@+id/tv_event_details"
        android:layout_below="@id/til_start_date"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv_event_details"
        android:layout_alignRight="@+id/til_start_time"
        android:layout_alignEnd="@+id/til_start_time"
        android:layout_alignLeft="@+id/til_start_date"
        android:layout_alignStart="@+id/til_start_date"
        android:layout_marginTop="10dp">

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:ems="10"
        android:textSize="16sp"
        android:singleLine="true"
        android:backgroundTint="@color/abc_tint_switch_track"
        android:textColor="@color/abc_tint_switch_track" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/til_location"
        android:layout_alignLeft="@+id/til_location"
        android:layout_alignStart="@+id/til_location"
        android:layout_alignRight="@+id/til_location"
        android:layout_alignEnd="@+id/til_location">

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/til_start_time"
        android:layout_alignEnd="@+id/til_start_time"
        android:layout_marginTop="41dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/description_hint"
        android:backgroundTint="@color/abc_tint_switch_track"
        android:textColor="@color/abc_tint_switch_track"
        android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_goal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/til_description"
        android:layout_alignLeft="@+id/til_description"
        android:layout_alignStart="@+id/til_description"
        android:layout_alignRight="@+id/til_description"
        android:layout_alignEnd="@+id/til_description">

    <EditText
        android:id="@+id/et_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/goal_hint"
        android:textColor="@color/abc_tint_switch_track"
        android:backgroundTint="@color/abc_tint_switch_track"
        android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/iv_cover_photo"
        android:layout_alignRight="@+id/tv_event_info"
        android:layout_alignEnd="@+id/tv_event_info"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:scaleType="centerInside"
        android:onClick="onPickPhoto"
        android:src="@drawable/camera"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/iv_cover_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_event_info"
        android:layout_alignLeft="@+id/iv_camera"
        android:layout_alignStart="@+id/iv_camera"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:onClick="onPickPhoto"
        android:background="@drawable/circle" />

</RelativeLayout>

</ScrollView>
